<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="meta_fh_eddy_MainScreenActivity">com.example.fh.eddy.MainScreenActivity</string>
    <string name="app_name">Eddy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Eintrag">Einträge</string>
    <string name="Grafik">Grafik</string>
    <string name="Einstellungen">Einstellungen</string>
    <string name="Button_AddNew">Neuer Eintrag</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bz_wert_textview">BZ Wert</string>
    <string name="eintrag_textview">Neuer Eintrag</string>
    <string name="bz_wert_hint">Ihr BZ Wert</string>
    <string name="save_button">SAVE</string>
    <string name="bz_data_textview">BZ DATA</string>
    <string name="blutzucker_text_view">Blutzucker</string>
    <string name="time_textview">Zeit</string>
    <string name="date_textview">Datum</string>
    <string name="blutzucker_textView">Blutzucker</string>
    <string name="mgDL_textview_text">mg / dl</string>
    <string name="mahlzeit_textView_text">Mahlzeit</string>
    <string name="insulin_textView">Insulin</string>
    <string name="bolus_textView">BOLUS</string>
    <string name="kh_textView">KH</string>
    <string name="basis_textView">BASIS</string>
    <string name="notiz_textView">Notiz</string>
    <string name="aktivitaet_textView">Aktivität</string>

    <string name="delete">Löschen</string>
    <string name="abort">Abbrechen</string>
    <string name="saved">gespeichert</string>
    <string name="deleted">gelöscht</string>
    <string name="activity">Aktivität</string>
    <string name="event">Event</string>
    <string name="medicin">Medizin</string>
    <string name="be_factor">Be-Faktor</string>
    <string name="activities">Aktivitäten</string>
    <string name="events">Events</string>
    <string name="medicins">Medikamente</string>
    <string name="be_factors">Be-Faktoren</string>
    <string name="confirm">Ja</string>
    <string name="cancel">Nein</string>
    <string name="reset">Zurücksetzen</string>

    <string name="delete_Activity">Möchten Sie diese Aktivität wirklich löschen? </string>
    <string name="delete_Be">Möchten Sie diesen Be-Faktor wirklich löschen? </string>
    <string name="delete_Event">Möchten Sie dieses Event wirklich löschen? </string>
    <string name="delete_Medicin">Möchten Sie diese Medizin wirklich löschen? </string>
    <string name="cancel_Update_Entry">Wirklich abbrechen?</string>
    <string name="delete_Single_Entry_From_ListView">Eintrag wirklich löschen?</string>
    <string name="delete_Single_Entry_Toast">Eintrag gelöscht.</string>

    <string name="be_verwaltung_button">BE-Faktor speichern</string>
    <string name="be_verwaltung_text">Neuen BE-Faktor angeben</string>
    <string name="activity_verwaltung_button">Aktivität speichern</string>
    <string name="activity_verwaltung_text">Neue Aktivität angeben</string>
    <string name="event_verwaltung_button">Event speichern</string>
    <string name="event_verwaltung_text">Neues Event angeben</string>
    <string name="medizin_verwaltung_button">Medizin speichern</string>
    <string name="medizin_verwaltung_text">Neue Medizin angeben</string>

    <string name="week">1 Woche</string>
    <string name="month">1 Monat</string>
    <string name="months">3 Monate</string>
    <string name="not_enough_entries">Leider existieren nicht genug Einträge um den Verlauf darzustellen.</string>

    <string name="event_spinner_textView">Ereignis</string>
    <string name="edit_entry_form_headerTextview">Eintrag Bearbeiten</string>

    <string name="no_activity">Keine Aktivität</string>
    <string name="no_event">Kein Ereignis</string>

    <string name="overview">Übersicht</string>
    <string name="name">Name</string>
    <string name="meal_display">Mahlzeit Angabe</string>
    <string name="upper_bloodsuger_bound">Obere Blutzuckergrenze</string>
    <string name="lower_bloodsuger_bound">Untere Blutzuckergrenze</string>
    <string name="basis_insulin">Basis Insulin</string>
    <string name="bolus_insulin">Bolus Insulin</string>
    <string name="compensation_factor">Korrekturfaktor</string>
    <string name="delete_all">Möchten sie ALLE gespeicherten Einstellungen und Einträge wirklich löschen? Achtung, diese Aktion kann nicht rückgängig gemacht werden!</string>

    <string name="error_message_if_bloodsugar_empty">Bitte geben Sie einen Blutzuckerwert ein.</string>
    <string name="toast_edit_entry_form_discarded_changes">Änderungen verworfen.</string>
    <string name="toast_edit_entry_form_entry_updated_and_saved">Eintrag wurde geändert.</string>
    <string name="toast_new_entry_saved">Eintrag gespeichert.</string>
    <string name="reset_user_name_textView">Ihr Name:</string>
    <string name="reset_name_placeholder">Name:</string>
    <string name="reset_meal_calc_unit">Ihre Berechnungseinheit:</string>
    <string name="reset_meal_unit_placeholder">Einheit:</string>
    <string name="reset_bloodsugar_bounds_textview">Ihre Blutzuckergrenzen:</string>
    <string name="reset_upperBound_textView">Obere Grenze:</string>
    <string name="reset_upperBound_Value_placeholder">Placeholder</string>
    <string name="reset_lowerBloodSugarBound_textView">Untere Grenze:</string>
    <string name="reset_lowerBloodSugarBound_placeholder">Placeholder2:</string>
    <string name="reset_insulinType_textView">Ihre Insulinsorten:</string>
    <string name="reset_Bolus_Insulin_textView">Bolus:</string>
    <string name="reset_Bolus_placeholder">Placeholder</string>
    <string name="reset_Base_Insulin_textView">Basis:</string>
    <string name="reset_base_insulin_placeholder">Placeholder2:</string>
    <string name="reset_correction_Factor_textView">Ihr Korrekturfaktor:</string>
    <string name="reset_correction_Factor_placeholder">Placeholder:</string>
    <string name="reset_Activity_textView">Ihre Aktivitäten:</string>
    <string name="resetActivity_placeholder">Aktivitäten:</string>
    <string name="reset_Event_textView">Ihre Ereignisse:</string>
    <string name="resetEvent_placeholder">Ereignisse:</string>
    <string name="reset_Medicine_textView">Ihre Medikamente:</string>
    <string name="resetMedicine_placeholder">Medikamente:</string>
    <string name="reset_CarbFactor_textView">Ihre Kohlenhydratfaktoren:</string>
    <string name="resetCarbFactor_placeholder">Faktoren:</string>

    <string name="activity_preference_key">activities</string>
    <string name="event_preference_key">events</string>
    <string name="befactor_preference_key">be_factor</string>
    <string name="medicin_preference_key">medicines</string>
    <string name="user_name_preference_key">user_name</string>
    <string name="mahlzeit_angabe_preference_key">mahlzeit_angabe</string>
    <string name="obere_blutzuckergrenze_preference_key">obere_blutzuckergrenze</string>
    <string name="untere_blutzuckergrenze_preference_key">untere_blutzuckergrenze</string>
    <string name="bolus_insulin_preference_key">bolus_insulin</string>
    <string name="basis_insulin_preference_key">basis_insulin</string>
    <string name="korrektur_factor_preference_key">korrektur_factor</string>

    <string name="cancel_new_entry">Eintrag wirklich verwerfen?</string>
    <string name="cancel_new_entry_toast">Eintrag verworfen.</string>
    <string name="prefTitleActivity">Aktivitäten</string>
    <string name="prefSummaryActivity">Verwalten Sie Ihre Aktivitäten</string>
    <string name="prefEventTitle">Events</string>
    <string name="prefEventSummary">Verwalten Sie Ihre Events</string>
    <string name="prefScreenPersonTitle">Person</string>
    <string name="prefScreenPersonSummary">Geben Sie Daten zu Ihrer Person an</string>
    <string name="editPrefName">Name</string>
    <string name="editPrefNameSummary">Geben Sie Ihren Namen an</string>
    <string name="listPrefMealUnitTypeTitle">Mahlzeit Angabe</string>
    <string name="listPrefMealUnitTypeSummary">Angabe der Mahlzeit in KH oder BE</string>
    <string name="prefScreenBloodsugarboundTitle">Blutzuckergrenzwerte</string>
    <string name="prefScreenBSBoundSummary">Angabe oberer/unterer Blutzuckergrenze</string>
    <string name="editPrefUpperBloodSugarBoundTitle">Obere Blutzuckergrenze</string>
    <string name="editPrefLowerBloodSugarBoundTitle">Untere Blutzuckergrenze</string>
    <string name="prefScreenInsType">Insulin Sorten</string>
    <string name="prefScreenInsTypeSummary">Geben Sie Ihre Insulin Sorten an</string>
    <string name="editPrefBaseInsulinTitle">Basis Insulin</string>
    <string name="editPrefBolusInsTypeTitle">Bolus Insulin</string>
    <string name="editPrefCorrectionFactorTitle">Korrekturfaktor</string>
    <string name="editPrefCorrectionFactorSummary">Geben Sie Ihren Korrekturfaktor an</string>
    <string name="prefUnitFactorTitle">BE-Faktor</string>
    <string name="prefUnitFactorSummary">Geben Sie Ihre BE-Faktoren an</string>
    <string name="prefMedTitle">Medikamente</string>
    <string name="prefMedSummary">Tragen Sie Ihre Medizin ein</string>
    <string name="prefUserDataTitle">Meine Daten</string>
    <string name="prefUserDataSummary">Übersicht aller angegebenen Daten</string>
    <string name="prefResetTitle">Reset</string>
    <string name="prefResetSummary">Löschen sie alle angegebenen Daten</string>


</resources>
