<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".90">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reset_userName_Textview"
                android:text="@string/reset_user_name_textView"
                android:textSize="20sp"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reset_userName_text"
                android:layout_toRightOf="@+id/reset_userName_Textview"
                android:layout_alignBaseline="@+id/reset_userName_Textview"
                android:text="@string/reset_name_placeholder"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:layout_below="@+id/reset_userName_Textview"
                android:id="@+id/reset_separator_name"
                android:background="#ff08c4ff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reset_carbSetting_Textview"
                android:text="@string/reset_meal_calc_unit"
                android:layout_below="@+id/reset_separator_name"
                android:textSize="20sp"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reset_carbSetting_text"
                android:layout_toRightOf="@+id/reset_carbSetting_Textview"
                android:layout_alignBaseline="@+id/reset_carbSetting_Textview"
                android:text="@string/reset_meal_unit_placeholder"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:layout_below="@+id/reset_carbSetting_Textview"
                android:id="@+id/reset_separator_carbSetting"
                android:background="#ff08c4ff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reset_upperBloodSugar_Textview"
                android:text="@string/reset_bloodsugar_bounds_textview"
                android:layout_below="@+id/reset_separator_carbSetting"
                android:textSize="20sp"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reset_upperBloodSugar_text"
                android:layout_below="@+id/reset_upperBloodSugar_Textview"
                android:text="@string/reset_upperBound_textView"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reset_upperBloodSugarValue_text"
                android:layout_toRightOf="@+id/reset_upperBloodSugar_text"
                android:layout_alignBaseline="@+id/reset_upperBloodSugar_text"
                android:text="@string/reset_upperBound_Value_placeholder"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reset_lowerBloodSugar_text"
                android:layout_toRightOf="@+id/reset_upperBloodSugarValue_text"
                android:layout_alignBaseline="@+id/reset_upperBloodSugar_text"
                android:text="@string/reset_lowerBloodSugarBound_textView"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reset_lowerBloodSugarValue_text"
                android:layout_toRightOf="@+id/reset_lowerBloodSugar_text"
                android:layout_alignBaseline="@+id/reset_upperBloodSugar_text"
                android:text="@string/reset_lowerBloodSugarBound_placeholder"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:layout_below="@+id/reset_upperBloodSugar_text"
                android:id="@+id/reset_bloodsugar_separator"
                android:background="#ff08c4ff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reset_Insulin_Textview"
                android:text="@string/reset_insulinType_textView"
                android:layout_below="@+id/reset_bloodsugar_separator"
                android:textSize="20sp"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reset_bolusinsulin_text"
                android:layout_below="@+id/reset_Insulin_Textview"
                android:text="@string/reset_Bolus_Insulin_textView"
                android:textSize="17sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reset_BolusInsulinValue_text"
                android:layout_toRightOf="@+id/reset_bolusinsulin_text"
                android:layout_alignBaseline="@+id/reset_bolusinsulin_text"
                android:text="@string/reset_Bolus_placeholder"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reset_baseInsulin_text"
                android:layout_toRightOf="@+id/reset_BolusInsulinValue_text"
                android:layout_alignBaseline="@+id/reset_bolusinsulin_text"
                android:text="@string/reset_Base_Insulin_textView"
                android:textSize="17sp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reset_BaseInsulinValue_text"
                android:layout_toRightOf="@+id/reset_baseInsulin_text"
                android:layout_alignBaseline="@+id/reset_bolusinsulin_text"
                android:text="@string/reset_base_insulin_placeholder"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:layout_below="@+id/reset_bolusinsulin_text"
                android:id="@+id/reset_insulin_separator"
                android:background="#ff08c4ff" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reset_CorrectionFactor_textView"
                android:layout_below="@+id/reset_insulin_separator"
                android:text="@string/reset_correction_Factor_textView"
                android:textSize="20sp"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reset_CorrectionFactorValue_textView"
                android:layout_toRightOf="@+id/reset_CorrectionFactor_textView"
                android:layout_alignBaseline="@+id/reset_CorrectionFactor_textView"
                android:text="@string/reset_correction_Factor_placeholder"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:layout_below="@+id/reset_CorrectionFactor_textView"
                android:id="@+id/reset_correctionFactor_separator"
                android:background="#ff08c4ff" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reset_activity_Textview"
                android:text="@string/reset_Activity_textView"
                android:layout_below="@+id/reset_correctionFactor_separator"
                android:textSize="20sp"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reset_activity_texts"
                android:layout_below="@+id/reset_activity_Textview"
                android:text="@string/resetActivity_placeholder"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:layout_below="@+id/reset_activity_texts"
                android:id="@+id/reset_separator_one"
                android:background="#ff08c4ff" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reset_event_Textview"
                android:text="@string/reset_Event_textView"
                android:layout_below="@+id/reset_separator_one"
                android:textSize="20sp"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reset_event_texts"
                android:layout_below="@+id/reset_event_Textview"
                android:text="@string/resetEvent_placeholder"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:layout_below="@+id/reset_event_texts"
                android:id="@+id/reset_separator_two"
                android:background="#ff08c4ff" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reset_medicine_Textview"
                android:text="@string/reset_Medicine_textView"
                android:layout_below="@+id/reset_separator_two"
                android:textSize="20sp"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reset_medicine_texts"
                android:layout_below="@+id/reset_medicine_Textview"
                android:text="@string/resetMedicine_placeholder"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:layout_below="@+id/reset_medicine_texts"
                android:id="@+id/reset_separator_three"
                android:background="#ff08c4ff" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reset_factor_Textview"
                android:text="@string/reset_CarbFactor_textView"
                android:layout_below="@+id/reset_separator_three"
                android:textSize="20sp"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reset_factor_texts"
                android:layout_below="@+id/reset_factor_Textview"
                android:text="@string/resetCarbFactor_placeholder"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:layout_below="@+id/reset_factor_texts"
                android:id="@+id/reset_separator_four"
                android:background="#ff08c4ff" />




        </RelativeLayout>


    </ScrollView>


</LinearLayout>