<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".99999"
        android:id="@+id/graph1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".00001"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33"
            android:text="@string/week"
            android:id="@+id/one_week"
            android:textColor="#ffffffff"
            android:background="@android:color/holo_blue_dark"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33"
            android:text="@string/month"
            android:id="@+id/one_month"
            android:textColor="#ffffffff"
            android:background="@android:color/holo_blue_dark"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33"
            android:text="@string/months"
            android:id="@+id/three_months"
            android:textColor="#ffffffff"
            android:background="@android:color/holo_blue_dark"/>

    </LinearLayout>

</LinearLayout>