<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/eintrag_textview"
                android:id="@+id/eintrag_header_text"
                android:textColor="#ff08c4ff"
                android:paddingLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="25sp"
                android:layout_weight="10.20" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/time_textview"
                android:id="@+id/zeit_textView"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="50dp"
                android:paddingLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/date_textview"
                android:id="@+id/date_textView"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="50dp"
                android:layout_marginRight="100dp"/>



            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:ems="10"
                android:id="@+id/time_editText"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="80dp"
                android:textColor="#ff000000"
                android:background="#ffffffff" />

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/date_editText"
                android:layout_alignBaseline="@+id/time_editText"
                android:layout_alignBottom="@+id/time_editText"
                android:layout_alignLeft="@+id/date_textView"
                android:layout_alignStart="@+id/date_textView"
                android:background="#ffffffff"
                android:textColor="#ff000000" />


        </RelativeLayout>
    </ScrollView>



</RelativeLayout>